add header, jump button

--- a/html-feladatok-bemutatkozo/about.html
+++ b/html-feladatok-bemutatkozo/about.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <header>
-      <nav></nav>
+      <h1>About</h1>
+      <nav id="top"></nav>
     </header>
     <main></main>
     <section></section>
 
-    <footer></footer>
+    <footer>
+      <a href="#top"><button>Jump to top</button> </a>
+    </footer>
   </body>
 </html>
