--- a/html-feladatok-bemutatkozo/gallery.html
+++ b/html-feladatok-bemutatkozo/gallery.html
@@ -11,8 +11,9 @@
       <h1>Gallery</h1>
       <nav id="top"></nav>
     </header>
-    <main></main>
-    <section></section>
+    <main>
+      <section></section>
+    </main>
 
     <footer>
       <a href="#top"><button>Jump to top</button> </a>
