--- a/html-feladatok-bemutatkozo/home.html
+++ b/html-feladatok-bemutatkozo/home.html
@@ -5,14 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <h1>Home</h1>
       <nav id="top"></nav>
     </header>
-    <main></main>
-    <section></section>
+    <main>
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in
+          ante nec urna imperdiet dignissim.
+        </p>
+
+        <div>
+          <img src="./img/home-1.jpg" alt="pottery" />
+          <img src="./img/home-2.jpg" alt="vases" />
+        </div>
+        <div class="row">
+          <div>
+            <p>Donec sit amet maximus tortor.</p>
+          </div>
+          <div>
+            <p>Sed luctus lectus vitae elit mollis aliquam.</p>
+          </div>
+          <div>
+            <p>Nullam ante massa, mollis bibendum ornare id.</p>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <a href="#top"><button>Jump to top</button> </a>
