--- a/html-feladatok-bemutatkozo/works.html
+++ b/html-feladatok-bemutatkozo/works.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -12,7 +13,49 @@
       <nav id="top"></nav>
     </header>
     <main>
-      <section></section>
+      <section>
+        <div>
+          <h2>Lorem ipsum dolor</h2>
+          <div class="row">
+            <img src="./img/works-1.jpg" alt="ceramic cleaning" />
+            <p>
+              Mauris porttitor condimentum elit, sed porttitor ligula. In mattis
+              quis sapien nec varius. Maecenas malesuada nisl nec odio rhoncus
+              sagittis. Morbi et lobortis massa. Nunc sit amet nunc vel felis
+              ornare ornare ut eu neque. Aliquam accumsan fringilla lectus
+              vulputate suscipit. Ut rhoncus nisi diam. Aenean lacus mauris,
+              aliquet a ornare vel, euismod at lectus. Etiam ligula urna,
+              porttitor vel magna eu, semper mattis dolor.
+            </p>
+          </div>
+        </div>
+        <div>
+          <h2>Sed bibendum vitae</h2>
+          <div class="row">
+            <img src="./img/works-2.jpg" alt="white ceramics" />
+            <p>
+              Quisque lectus dolor, volutpat et vestibulum vel, venenatis nec
+              nulla. Maecenas finibus euismod odio, et egestas magna imperdiet
+              nec. Integer gravida vitae nulla at rutrum. Maecenas tincidunt
+              tempus risus, eget laoreet tellus sodales ut. Proin lobortis
+              sollicitudin erat, a mattis eros ultrices et. Quisque ac leo elit.
+            </p>
+          </div>
+        </div>
+        <div>
+          <h2>Donec sit amet maximus</h2>
+          <div class="row">
+            <img src="./img/works-3.jpg" alt="ceramics on shelves" />
+            <p>
+              Sed luctus lectus vitae elit mollis aliquam. Nullam ante massa,
+              mollis bibendum ornare id, sagittis dapibus erat. Sed viverra
+              libero erat, eget dignissim velit fermentum sit amet. In hac
+              habitasse platea dictumst. Duis convallis placerat nisi vitae
+              ullamcorper. Cras vitae neque et mauris tempor cursus a a diam.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
