--- a/html-feladatok-bemutatkozo/gallery.html
+++ b/html-feladatok-bemutatkozo/gallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -12,7 +13,42 @@
       <nav id="top"></nav>
     </header>
     <main>
-      <section></section>
+      <section>
+        <div class="row gallery-row">
+          <img class="gallery-img" src="./img/gallery (1).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (2).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (3).jpg" alt="" />
+        </div>
+        <div class="row gallery-row">
+          <img class="gallery-img" src="./img/gallery (4).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (5).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (6).jpg" alt="" />
+        </div>
+        <div class="row gallery-row">
+          <img class="gallery-img" src="./img/gallery (7).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (8).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (9).jpg" alt="" />
+        </div>
+        <div class="row gallery-row">
+          <img class="gallery-img" src="./img/gallery (10).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (11).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (12).jpg" alt="" />
+        </div>
+        <div class="row gallery-row">
+          <img class="gallery-img" src="./img/gallery (13).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (14).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (15).jpg" alt="" />
+        </div>
+        <div class="row gallery-row">
+          <img class="gallery-img" src="./img/gallery (16).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (17).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (18).jpg" alt="" />
+        </div>
+        <div class="row gallery-row">
+          <img class="gallery-img" src="./img/gallery (19).jpg" alt="" />
+          <img class="gallery-img" src="./img/gallery (20).jpg" alt="" />
+        </div>
+      </section>
     </main>
 
     <footer>
