--- a/html-feladatok-bemutatkozo/works.html
+++ b/html-feladatok-bemutatkozo/works.html
@@ -10,7 +10,12 @@
   <body>
     <header>
       <h1>Works</h1>
-      <nav id="top"></nav>
+      <nav id="top">
+        <a href="./home.html"> Home</a>
+        <a href="./works.html"> Works</a>
+        <a href="./gallery.html">Gallery </a>
+        <a href="./about.html">About </a>
+      </nav>
     </header>
     <main>
       <section>
