--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -64,7 +64,9 @@
 
       <section class="content">
         <h1>Dashboard</h1>
-        <div class="main__breadcrumb"></div>
+        <div class="main__breadcrumb">
+          <p class="dash">Dashboard</p>
+        </div>
         <div class="main__cards">
           <div class="main__card card--blue">
             <div class="card__top">
