--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -16,10 +16,15 @@
     <header class="header--dark">
       <div>
         <h3 class="header__title">Admin Page</h3>
+        <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
       <div class="header__search">
-        <input class="search__input" type="text" />
-        <button class="search__btn">
+        s
+        <input
+          placeholder="Search for ..."
+          class="search__input"
+          type="text"
+        /><button class="search__btn">
           <i class="fa fa-search"></i>
         </button>
       </div>
@@ -30,25 +35,25 @@
         <nav class="main__nav">
           <ul class="nav__ul">
             <li>
-              <h3>Core</h3>
+              <h3 class="upper">Core</h3>
             </li>
             <li>
               <i class="fa fa-tachometer"></i>
-              <a href="">dashboard</a>
+              <a href="">Dashboard</a>
             </li>
             <li>
-              <h3>Interface</h3>
+              <h3 class="upper">Interface</h3>
             </li>
             <li>
               <i class="fa fa-windows"></i>
-              <a href="">layouts</a>
+              <a href="">Layouts</a>
             </li>
             <li>
               <i class="fa fa-bookmark"></i>
-              <a href="">pages</a>
+              <a href="">Pages</a>
             </li>
             <li>
-              <h3>Addons</h3>
+              <h3 class="upper">Addons</h3>
             </li>
             <li>
               <i class="fa fa-area-chart"></i>
