--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -14,19 +14,20 @@
   </head>
   <body>
     <header class="header--dark">
-      <div>
+      <div class="horizontal-text">
         <h3 class="header__title">Admin Page</h3>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
-      <div class="header__search">
-        s
-        <input
-          placeholder="Search for ..."
-          class="search__input"
-          type="text"
-        /><button class="search__btn">
-          <i class="fa fa-search"></i>
-        </button>
+      <div class="horizontal-text">
+        <div class="header__search">
+          <input
+            placeholder="Search for ..."
+            class="search__input"
+            type="text"
+          /><button class="search__btn">
+            <i class="fa fa-search"></i>
+          </button>
+        </div>
       </div>
     </header>
 
