css arrowes added

--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -27,6 +27,8 @@
           /><button class="search__btn">
             <i class="fa fa-search"></i>
           </button>
+          <i class="fa fa-user-o" aria-hidden="true"></i>
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
         </div>
       </div>
     </header>
@@ -45,13 +47,19 @@
             <li>
               <h3 class="upper">Interface</h3>
             </li>
-            <li>
-              <i class="fa fa-windows"></i>
-              <a href="">Layouts</a>
+            <li class="li-separate">
+              <div>
+                <i class="fa fa-windows"></i>
+                <a href="">Layouts</a>
+              </div>
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
             </li>
-            <li>
-              <i class="fa fa-bookmark"></i>
-              <a href="">Pages</a>
+            <li class="li-separate">
+              <div>
+                <i class="fa fa-bookmark"></i>
+                <a href="">Pages</a>
+              </div>
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
             </li>
             <li>
               <h3 class="upper">Addons</h3>
@@ -80,6 +88,7 @@
             </div>
             <div class="card__bottom">
               <h4>View Details</h4>
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
           </div>
           <div class="main__card card--yellow">
@@ -88,6 +97,7 @@
             </div>
             <div class="card__bottom">
               <h4>View Details</h4>
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
           </div>
           <div class="main__card card--green">
@@ -96,6 +106,7 @@
             </div>
             <div class="card__bottom">
               <h4>View Details</h4>
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
           </div>
           <div class="main__card card--red">
@@ -104,6 +115,7 @@
             </div>
             <div class="card__bottom">
               <h4>View Details</h4>
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
           </div>
         </div>
