--- a/js-5-feladatok-zaro-projekt/index.html
+++ b/js-5-feladatok-zaro-projekt/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <style>
+      .hidden {
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    <div class="page">
-      <div class="main"></div>
-    </div>
+    <div class="messages"></div>
+    <div class="main"></div>
 
     <script src="./index.js"></script>
   </body>
