--- a/bs-feladatok-login/index.html
+++ b/bs-feladatok-login/index.html
@@ -36,7 +36,7 @@
 
   <!-- <body class="text-center flex  mx-auto"> -->
 
-  <body class="h-100 d-flex align-items-center">
+  <body class="h-100 d-flex align-items-center bg-light">
     <section class="py-5 container">
       <div class="row justify-content-center">
         <div class="col-4">
